--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: rgb(solid white); 
+  background-image: url(img/fj8gb.webp);
   margin-top: 5%;
 }
 
